--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive simulated Morality Similarity Networks (MFQ-2)</title>
+    <title>Simulated Interactive Moral Similarity Networks (MFQ-2)</title>
     <style>
         body {
             font-family: sans-serif;
@@ -30,15 +30,15 @@
     </style>
 </head>
 <body>
-    <h1>Übersicht: Interaktive Moralische Ähnlichkeitsnetzwerke</h1>
+    <h1>Overview: Simulated Interactive Moral Similarity Networks (MFQ-2)</h1>
     <p>Choose one network to visualize:</p>
     <ul>
-        <li><a href="./interactive_network_Care.html">Netzwerk für Care</a></li>
-        <li><a href="./interactive_network_Equality.html">Netzwerk für Equality</a></li>
-        <li><a href="./interactive_network_Proportionality.html">Netzwerk für Proportionality</a></li>
-        <li><a href="./interactive_network_Loyalty.html">Netzwerk für Loyalty</a></li>
-        <li><a href="./interactive_network_Authority.html">Netzwerk für Authority</a></li>
-        <li><a href="./interactive_network_Purity.html">Netzwerk für Purity</a></li>
+        <li><a href="./interactive_network_Care.html">Network for Care</a></li>
+        <li><a href="./interactive_network_Equality.html">Network for Equality</a></li>
+        <li><a href="./interactive_network_Proportionality.html">Network for Proportionality</a></li>
+        <li><a href="./interactive_network_Loyalty.html">Network for Loyalty</a></li>
+        <li><a href="./interactive_network_Authority.html">Network for Authority</a></li>
+        <li><a href="./interactive_network_Purity.html">Network for Purity</a></li>
         </ul>
 </body>
 </html>
