--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <h1>Overview: Simulated Interactive Moral Similarity Networks (MFQ-2)</h1>
     <p>Choose one network to visualize:</p>
     <ul>
-        <li><a href="./interactive_network_Care.html">Network for Care</a></li>
-        <li><a href="./interactive_network_Equal.html">Network for Equality</a></li>
-        <li><a href="./interactive_network_Prop.html">Network for Proportionality</a></li>
-        <li><a href="./interactive_network_Loyal.html">Network for Loyalty</a></li>
-        <li><a href="./interactive_network_Author.html">Network for Authority</a></li>
-        <li><a href="./interactive_network_Purity.html">Network for Purity</a></li>
+        <li><a href="./interactive_network_Care.html">Network for Care (colored by Community)</a></li>
+        <li><a href="./interactive_network_Equal.html">Network for Equality (colored by Academic Discipline)</a></li>
+        <li><a href="./interactive_network_Prop.html">Network for Proportionality (colored by Age)</a></li>
+        <li><a href="./interactive_network_Loyal.html">Network for Loyalty (colored by Agreeableness)</a></li>
+        <li><a href="./interactive_network_Author.html">Network for Authority (colored by Extraversion)</a></li>
+        <li><a href="./interactive_network_Purity.html">Network for Purity (colored by Social Media Activity)</a></li>
         </ul>
 </body>
 </html>
